src/seqvars/query/snapshots/varfish_server_worker__seqvars__query__schema__test__sequence_variant_from_vcf@Case_1.ingested.vcf.snap
---
source: src/seqvars/query/schema.rs
expression: "&seqvar"
---
chrom: "17"
pos: 41249263
reference: G
alternative: A
ann_fields:
  - allele:
      Alt:
        alternative: A
    consequences:
      - splice_region_variant
      - synonymous_variant
    putative_impact: MODERATE
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007294.4
    feature_biotype: Coding
    rank:
      ord: 8
      total: 23
    hgvs_t: c.591C>T
    hgvs_p: p.C197=
    tx_pos:
      ord: 704
      total: 7088
    cds_pos:
      ord: 591
      total: 5592
    protein_pos:
      ord: 197
      total: 1864
    distance: 44
    messages: ~
  - allele:
      Alt:
        alternative: A
    consequences:
      - splice_region_variant
      - synonymous_variant
    putative_impact: MODERATE
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007297.4
    feature_biotype: Coding
    rank:
      ord: 7
      total: 22
    hgvs_t: c.450C>T
    hgvs_p: p.C150=
    tx_pos:
      ord: 644
      total: 7028
    cds_pos:
      ord: 450
      total: 5451
    protein_pos:
      ord: 150
      total: 1817
    distance: 44
    messages: ~
  - allele:
      Alt:
        alternative: A
    consequences:
      - splice_region_variant
      - synonymous_variant
    putative_impact: MODERATE
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007299.4
    feature_biotype: Coding
    rank:
      ord: 8
      total: 22
    hgvs_t: c.591C>T
    hgvs_p: p.C197=
    tx_pos:
      ord: 698
      total: 3696
    cds_pos:
      ord: 591
      total: 2100
    protein_pos:
      ord: 197
      total: 700
    distance: 44
    messages: ~
  - allele:
      Alt:
        alternative: A
    consequences:
      - splice_region_variant
      - synonymous_variant
    putative_impact: MODERATE
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007300.4
    feature_biotype: Coding
    rank:
      ord: 8
      total: 24
    hgvs_t: c.591C>T
    hgvs_p: p.C197=
    tx_pos:
      ord: 704
      total: 7151
    cds_pos:
      ord: 591
      total: 5655
    protein_pos:
      ord: 197
      total: 1885
    distance: 44
    messages: ~
gnomad_exomes_an: 31398
gnomad_exomes_hom: 0
gnomad_exomes_het: 56
gnomad_exomes_hemi: 0
gnomad_genomes_an: 251304
gnomad_genomes_hom: 0
gnomad_genomes_het: 369
gnomad_genomes_hemi: 0
helix_an: 0
helix_hom: 0
helix_het: 0
inhouse_an: 0
inhouse_hom: 0
inhouse_het: 0
inhouse_hemi: 0
call_info:
  Case_1_father-N1-DNA1-WGS1:
    genotype: 0/0
    quality: 99
    dp: 52
    ad: 0
    phasing_id: ~
  Case_1_index-N1-DNA1-WGS1:
    genotype: 0/0
    quality: 99
    dp: 46
    ad: 0
    phasing_id: ~
  Case_1_mother-N1-DNA1-WGS1:
    genotype: 0/1
    quality: 99
    dp: 42
    ad: 21
    phasing_id: ~

