src/seqvars/query/snapshots/varfish_server_worker__seqvars__query__schema__test__sequence_variant_from_vcf@dragen.ingested.vcf.snap
---
source: src/seqvars/query/schema.rs
expression: "&seqvar"
---
chrom: "17"
pos: 41256074
reference: CA
alternative: C
ann_fields:
  - allele:
      Alt:
        alternative: C
    consequences:
      - intron_variant
    putative_impact: MODIFIER
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007294.4
    feature_biotype:
      - Coding
    rank:
      ord: 6
      total: 22
    hgvs_t: c.441+64delT
    hgvs_p: p.?
    tx_pos:
      ord: 554
      total: 7088
    cds_pos:
      ord: 441
      total: 5592
    protein_pos: ~
    distance: 63
    messages: ~
  - allele:
      Alt:
        alternative: C
    consequences:
      - intron_variant
    putative_impact: MODIFIER
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007297.4
    feature_biotype:
      - Coding
    rank:
      ord: 5
      total: 21
    hgvs_t: c.300+64delT
    hgvs_p: p.?
    tx_pos:
      ord: 494
      total: 7028
    cds_pos:
      ord: 300
      total: 5451
    protein_pos: ~
    distance: 63
    messages: ~
  - allele:
      Alt:
        alternative: C
    consequences:
      - intron_variant
    putative_impact: MODIFIER
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007299.4
    feature_biotype:
      - Coding
    rank:
      ord: 6
      total: 21
    hgvs_t: c.441+64delT
    hgvs_p: p.?
    tx_pos:
      ord: 548
      total: 3696
    cds_pos:
      ord: 441
      total: 2100
    protein_pos: ~
    distance: 63
    messages: ~
  - allele:
      Alt:
        alternative: C
    consequences:
      - intron_variant
    putative_impact: MODIFIER
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007300.4
    feature_biotype:
      - Coding
    rank:
      ord: 6
      total: 23
    hgvs_t: c.441+64delT
    hgvs_p: p.?
    tx_pos:
      ord: 554
      total: 7151
    cds_pos:
      ord: 441
      total: 5655
    protein_pos: ~
    distance: 63
    messages: ~
call_info:
  CASE:
    genotype: "|1|1"
    quality: 99
    dp: 80
    ad: 80
    phasing_id: 41256074
gnomad_exomes_an: 20150
gnomad_exomes_hom: 2725
gnomad_exomes_het: 5476
gnomad_exomes_hemi: 0
gnomad_genomes_an: 0
gnomad_genomes_hom: 0
gnomad_genomes_het: 0
gnomad_genomes_hemi: 0
helix_an: 0
helix_hom: 0
helix_het: 0
inhouse_an: 0
inhouse_hom: 0
inhouse_het: 0
inhouse_hemi: 0