src/seqvars/query/snapshots/varfish_server_worker__seqvars__query__schema__test__smoke_test_load-2.snap
---
source: src/seqvars/query/schema.rs
expression: "&query"
---
effects:
  - 3_prime_UTR_exon_variant
  - 3_prime_UTR_intron_variant
  - 5_prime_UTR_exon_variant
  - 5_prime_UTR_intron_variant
  - coding_transcript_intron_variant
  - complex_substitution
  - direct_tandem_duplication
  - disruptive_inframe_deletion
  - disruptive_inframe_insertion
  - downstream_gene_variant
  - exon_loss_variant
  - feature_truncation
  - frameshift_elongation
  - frameshift_truncation
  - frameshift_variant
  - inframe_deletion
  - inframe_insertion
  - internal_feature_elongation
  - missense_variant
  - mnv
  - non_coding_transcript_exon_variant
  - non_coding_transcript_intron_variant
  - splice_acceptor_variant
  - splice_donor_variant
  - splice_region_variant
  - start_lost
  - stop_gained
  - stop_lost
  - stop_retained_variant
  - structural_variant
  - synonymous_variant
  - transcript_ablation
  - upstream_gene_variant
gnomad_exomes_enabled: true
gnomad_genomes_enabled: true
inhouse_enabled: true
helixmtdb_enabled: true
quality:
  sample:
    dp_het: 10
    dp_hom: 5
    gq: 10
    ab: 0.2
    ad: 3
    ad_max: ~
    fail: drop-variant
genotype:
  sample: het
selected_variants: ~
transcripts_coding: true
transcripts_noncoding: true
var_type_snv: true
var_type_indel: true
var_type_mnv: true
max_exon_dist: 100
gene_allowlist: []
genomic_regions: ~
require_in_clinvar: false
clinvar_include_benign: false
clinvar_include_pathogenic: true
clinvar_include_likely_benign: false
clinvar_include_likely_pathogenic: true
clinvar_include_uncertain_significance: false
gnomad_exomes_frequency: 0.002
gnomad_exomes_heterozygous: 20
gnomad_exomes_homozygous: 0
gnomad_exomes_hemizygous: ~
gnomad_genomes_frequency: 0.002
gnomad_genomes_heterozygous: 4
gnomad_genomes_homozygous: 0
gnomad_genomes_hemizygous: ~
inhouse_carriers: 20
inhouse_heterozygous: ~
inhouse_homozygous: ~
inhouse_hemizygous: ~
helixmtdb_frequency: 0.01
helixmtdb_heterozygous: ~
helixmtdb_homozygous: ~

