src/seqvars/query/snapshots/varfish_server_worker__seqvars__query__schema__test__smoke_test_load@empty.json.snap
---
source: src/seqvars/query/schema.rs
expression: "&query"
---
consequences:
  - chromosome_number_variation
  - exon_loss_variant
  - frameshift_variant
  - rare_amino_acid_variant
  - splice_acceptor_variant
  - splice_donor_variant
  - start_lost
  - stop_gained
  - stop_lost
  - transcript_ablation
  - 3_prime_UTR_truncation
  - 5_prime_UTR_truncation
  - conservative_inframe_deletion
  - conservative_inframe_insertion
  - disruptive_inframe_deletion
  - disruptive_inframe_insertion
  - missense_variant
  - regulatory_region_ablation
  - splice_region_variant
  - TFBS_ablation
  - 5_prime_UTR_premature_start_codon_gain_variant
  - initiator_codon_variant
  - start_retained
  - stop_retained_variant
  - synonymous_variant
  - 3_prime_UTR_variant
  - 5_prime_UTR_variant
  - coding_sequence_variant
  - conserved_intergenic_variant
  - conserved_intron_variant
  - downstream_gene_variant
  - exon_variant
  - feature_elongation
  - feature_truncation
  - gene_variant
  - intergenic_variant
  - intron_variant
  - mature_miRNA_variant
  - miRNA
  - NMD_transcript_variant
  - non_coding_transcript_exon_variant
  - non_coding_transcript_intron_variant
  - regulatory_region_amplification
  - regulatory_region_variant
  - TF_binding_site_variant
  - TFBS_amplification
  - transcript_amplification
  - transcript_variant
  - upstream_gene_variant
quality: {}
genotype: {}
selected_variants: ~
transcripts_coding: true
transcripts_noncoding: true
var_type_snv: true
var_type_indel: true
var_type_mnv: true
max_exon_dist: ~
gene_allowlist: ~
genomic_regions: ~
require_in_clinvar: false
clinvar_include_benign: true
clinvar_include_pathogenic: true
clinvar_include_likely_benign: true
clinvar_include_likely_pathogenic: true
clinvar_include_uncertain_significance: true
gnomad_exomes_enabled: false
gnomad_genomes_enabled: false
inhouse_enabled: false
helixmtdb_enabled: false
gnomad_exomes_frequency: ~
gnomad_exomes_heterozygous: ~
gnomad_exomes_homozygous: ~
gnomad_exomes_hemizygous: ~
gnomad_genomes_frequency: ~
gnomad_genomes_heterozygous: ~
gnomad_genomes_homozygous: ~
gnomad_genomes_hemizygous: ~
inhouse_carriers: ~
inhouse_heterozygous: ~
inhouse_homozygous: ~
inhouse_hemizygous: ~
helixmtdb_frequency: ~
helixmtdb_heteroplasmic: ~
helixmtdb_homoplasmic: ~

